--- a/video.html
+++ b/video.html
@@ -12,6 +12,8 @@
 
   <header>
     <h1 class="logo"><h1 class="icon">🎭</h1><span class="fun">fun</span><span class="key">key</span></h1>
+
+	<h1 class="timer" id="timer">00:00</h1>
   </header>
   <video id="video" width="420">
     <source src="assets/ed.mp4" type="video/mp4">
@@ -28,6 +30,7 @@
   </div>
 
   <!-- <script src="scripts/script.js"></script> -->
-  <script src="scripts/video.js"></script>
+  <!-- <script src="scripts/video.js"></script> -->
+  <script src="scripts/video2.0.js"></script>
 </body>
 </html>
