--- a/lyrics_levels.html
+++ b/lyrics_levels.html
@@ -8,9 +8,15 @@
 
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="styles/levels.css">
+	<link rel="stylesheet" href="styles/basics.css">
+
 </head>
 
 <body>
+
+	<header>
+		<img class="logo" src="assets/img/logo.png">
+	</header>
 
 	<div class="level-selector-container">
 		<!-- Select Level -->
@@ -25,7 +31,7 @@
 			<label class="btn btn-outline-danger brand-bg" data-level="hard">
 				<input type="radio" name="options" autocomplete="off"> Hard
 			</label>
-			<label class="btn btn-outline-secondary brand-bg dropdown-toggle" data-level="custom" data-toggle="dropdown"
+			<label class="btn btn-outline-secondary brand-bg dropdown-toggle custom-btn" data-level="custom" data-toggle="dropdown"
 				aria-expanded="false" data-bs-reference="parent">
 				<input type="radio" name="options" autocomplete="off"> Custom
 			</label>
@@ -34,22 +40,38 @@
 		<!-- Custom Options -->
 		<div class="custom-options border border-secondary" id="customOptions" style="display: none;">
 			<div class="form-check" onclick="$(this).children('form-check-input').click()">
-				<label class="form-check-label" for="customOption1">Optional customization</label>
-				<input class="form-check-input" type="checkbox" id="customOption1">
+				<label class="form-check-label" for="customOption1">Capital Letters</label>
+				<input name="capital-letters" class="form-check-input" type="checkbox" id="customOption1">
 			</div>
 			<div class="form-check">
-				<label class="form-check-label" for="customOption2">Option 2</label>
-				<input class="form-check-input" type="checkbox" id="customOption2">
+				<label class="form-check-label" for="customOption2">Punctuation marks</label>
+				<input name="Punctuation" class="form-check-input" type="checkbox" id="customOption2">
 			</div>
 			<div class="form-check">
-				<label class="form-check-label" for="customOption3">Option 3</label>
+				<label class="form-check-label" for="customOption3">Double spaces</label>
 				<input class="form-check-input" type="checkbox" id="customOption3">
+			</div>
+			<div class="form-check">
+				<label class="form-check-label" for="customOption4">Speed</label>
+				<select class="form-select" name="speed" aria-label="Default select example"
+					style="cursor: pointer; font-size: 0.9em; padding: 0 2px; text-align: justify;">
+					<option value="1">0.25</option>
+					<option value="2">0.5</option>
+					<option value="3">0.75</option>
+					<option selected>Normal</option>
+					<option value="1">1.25</option>
+					<option value="2">1.5</option>
+					<option value="3">1.75</option>
+					<option value="3">2</option>
+				</select>
 			</div>
 		</div>
 
 		<!-- Begin Button -->
 		<div style="display: block; width: 100%;">
-			<button id="start" class="btn btn-outline-info btn-lg mt-3 align-middle" style="display: none;" onclick="start()">BEGIN</button>
+			<img class="level-img" src="" alt="Easy" style="display: none;">
+			<!-- <button id="start" class="btn btn-outline-info btn-lg mt-3 align-middle" style="display: none;" onclick="start()">BEGIN</button> -->
+			<button id="start" class="btn btn-lg mt-3 align-middle" style="display: none;" onclick="start()">BEGIN</button>
 		</div>
 	</div>
 
@@ -59,56 +81,7 @@
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-	<script>
-		$(document).ready(function () {
-			const selectedLevelText = $('#selectedLevelText');
-			const customOptions = $('#customOptions');
-
-			$(".dropdown-toggle").on('click', function () {
-				customOptions.toggle();
-			});
-
-
-			// Hide dropdown when clicking outside of it
-			$(document).on('click', function (event) {
-				if (!$(event.target).closest('.dropdown').length) {
-					$('.dropdown-menu').hide(); // Hide all dropdown menus
-				}
-			});
-
-			$('.level-buttons .btn').on('click', function () {
-				$('.level-buttons .btn').removeClass('active');
-				$(this).addClass('active');
-
-				const level = $(this).data('level');
-				updateLevel(level);
-			});
-
-			function updateLevel(level) {
-				const levelText = getLevelText(level);
-				// selectedLevelText.text(`Selected Level: ${levelText}`);
-				selectedLevelText.text(`${levelText}`);
-
-				$("#start").show();
-			}
-
-			function getLevelText(level) {
-				switch (level) {
-					case 'easy':
-						return 'Easy';
-					case 'medium':
-						return 'Medium';
-					case 'hard':
-						return 'Hard';
-					case 'custom':
-						return 'Custom';
-					default:
-						return 'Unknown';
-				}
-			}
-		});
-	</script>
-
+	<script src="scripts/levels.js"></script>
 </body>
 
 </html>
