--- a/upload.html
+++ b/upload.html
@@ -1,20 +1,70 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.5.3/css/bootstrap.min.css"
+		integrity="sha512-oc9+XSs1H243/FRN9Rw62Fn8EtxjEYWHXRvjS43YtueEewbS6ObfXcJNyohjHqVKFPoXXUxwc+q1K7Dee6vv9g=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-	<link rel="stylesheet" href="lab.css">
+
+	<title>Drag and Drop File Upload</title>
+	<style>
+		#drop_zone {
+			width: 100%;
+			min-height: 200px;
+			border: 2px dashed #ccc;
+			border-radius: 10px;
+			padding: 20px;
+			box-sizing: border-box;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-direction: column;
+		}
+
+		#drop_zone.hover {
+			background-color: #f0f0f0;
+		}
+	</style>
+
+	<link rel="stylesheet" href="css/upload.css">
+
 </head>
 
 <body>
+
+	<div class="container">
+		<h1 class="text-center mb-5 mt-5"><b>Drag and Drop File Upload in Node.js</b></h1>
+
+		<div>
+			<p>Drag and drop files here</p>
+		</div>
+		<br />
+		<div class="card mb-5">
+			<div class="card-header">
+				<div class="row">
+					<div class="col col-6">Uploaded File</div>
+					<div class="col col-6"></div>
+				</div>
+			</div>
+			<div id="uploadedImage" class="card-body">
+
+			</div>
+		</div>
+	</div>
+
 	<div class="wrapper">
 		<div class="container">
 			<h1>Upload a file</h1>
-			<div class="upload-container">
+			<div class="upload-container" id="drop_zone">
 				<div class="border-container">
 					<div class="icons fa-4x">
 						<i class="fas fa-file-image" data-fa-transform="shrink-3 down-2 left-6 rotate--45"></i>
@@ -23,7 +73,7 @@
 					</div>
 					<input type="file" id="file-upload" style="visibility: hidden;">
 					<p>Drag and drop files here, or
-						<button id="file-browser">browse</button> your computer.
+						<a href="javascript:void(0)" id="file-browser">browse</a> your computer.
 					</p>
 				</div>
 			</div>
@@ -31,11 +81,12 @@
 	</div>
 
 	<!-- Bootstrap JS and dependencies -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-	<script src="lab.js"></script>
+	<script src="js/upload.js"></script>
+
 </body>
 
 </html>
