--- a/upload.html
+++ b/upload.html
@@ -7,8 +7,8 @@
 	<title>Music Modal</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="lab/lab.css">
-	<link rel="stylesheet" href="lab/lab2.css">
+	<link rel="stylesheet" href="css/upload.css">
+	<link rel="stylesheet" href="css/toasts.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 					</div>
 					<div class="modal-body">
 						<div class="left-side">
-							<div class="thumbnail drop-zone"
+							<div class="thumbnail drop-zone" data-type="image"
 								data-image-url="https://tse2.mm.bing.net/th?id=OIG2.5dM5XXn27bsOWSTcjIWe&pid=ImgGn">
 								<div class="play-icon-container">
 									<i class="fa fa-file-image" aria-hidden="true"></i>
@@ -53,7 +53,7 @@
 									pattern="[A-Za-z0-9\s]+" title="Enter a valid music name (letters, numbers, and spaces only)"
 									required>
 							</div>
-							<div class="drag-drop drop-zone video-drop">
+							<div class="drag-drop drop-zone video-drop" data-type="video">
 								<span>
 									<i class="fas fa-file-video" data-fa-transform="shrink-3 down-2 left-6 rotate--45"></i>
 									Drop video here, or <a href="javascript:void(0)">browse</a>
@@ -71,7 +71,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="drag-drop drop-zone lyrics-drop">
+							<div class="drag-drop drop-zone lyrics-drop" data-type="lyrics">
 								<i class="fas fa-file-alt" data-fa-transform="shrink-3 down-2 left-6 rotate--45"></i>
 								<span>Drop Lyrics here, or <a href="javascript:void(0)">browse</a>
 									<input class="drop-browse" type="file" name="video" accept="text/*" style="display: none">.
@@ -126,7 +126,7 @@
 		});
 	</script>
 	<script src="js/upload.js"></script>
-	<script src="lab/lab2.js"></script>
+	<script src="js/toasts.js"></script>
 </body>
 
 </html>
