--- a/public/login.html
+++ b/public/login.html
@@ -10,6 +10,16 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/signup.css">
 	<link rel="stylesheet" href="css/toasts.css">
+	<style>
+		a:hover {
+			text-decoration: none;
+		}
+
+		.container {
+			display: block;
+			width: 22rem;			
+		}
+	</style>
 </head>
 
 <body>
@@ -27,34 +37,30 @@
 					<input type="file" id="avatar-upload" style="display: none" accept="images">
 					<input type="hidden" name="avatar" value="assets/images/logo.png">
 					<div class="form-group">
-						<label for="name"><i class="fa fa-user"></i> &nbsp;Your Name</label>
-						<input name="name" type="text" class="form-control" id="name" placeholder="Your Name" required>
-					</div>
-					<div class="form-group">
-						<label for="email"><i class="fa fa-envelope"></i> &nbsp;Your Email</label>
+						<label for="email"><i class="fa fa-envelope"></i> &nbsp;Email</label>
 						<input name="email" type="email" class="form-control" id="email" placeholder="Your Email" required>
 					</div>
 					<div class="form-group">
 						<label for="password"><i class="fa fa-lock"></i> &nbsp;Password</label>
 						<input name="password" type="password" class="form-control" id="password" placeholder="Password" required>
 					</div>
-					<div class="form-group">
-						<label for="confirm-password"><i class="fa fa-key"></i> &nbsp;Repeat your password</label>
-						<input type="password" class="form-control" id="confirm-password" placeholder="Repeat your password">
-					</div>
+
 					<div class="form-check">
-						<input type="checkbox" class="form-check-input" id="terms">
-						<label class="form-check-label" for="terms">I agree to all statements in <a href="#"
-								class="text-primary">Terms of service</a></label>
+						<label class="form-check-label"> &nbsp;
+							<a href="/signup" class="text-primary">
+								<i class="fas fa-user-plus"></i>
+								Create Account
+							</a>
+						</label>
 					</div>
-					<button type="submit" class="btn btn-primary btn-block mt-4">Register</button>
+					<button type="submit" class="btn btn-primary btn-block mt-4">Login</button>
 				</form>
 			</div>
 		</div>
 	</div>
 	</div>
 
-	
+
 	<div class="toast-container" id="toast-container">
 	</div>
 
@@ -65,5 +71,7 @@
 
 	<script src="js/signup.js"></script>
 	<script src="js/toasts.js"></script>
+
 </body>
+
 </html>
