--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,9 @@
 				<li><a href="browse.html">Browse</a></li>
 				<li><a href="details.html">Details</a></li>
 				<li><a href="match.html">Match</a></li>
-				<li><a href="profile.html">Profile <img src="assets/images/avatar.jpg" alt=""></a></li>
+				<li><a href="/login" class="active">Login</a></li>
+				<!-- <li><a href="profile.html">Login <img src="assets/images/logo.png" alt=""></a></li> -->
+				<!-- <li><a href="profile.html">Profile <img src="assets/images/avatar.jpg" alt=""></a></li> -->
 			</ul>
 			<a class='menu-trigger'>
 				<span>Menu</span>
