--- a/public/login.html
+++ b/public/login.html
@@ -4,33 +4,50 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Sign Up</title>
+	<title>Funkey | Login</title>
 	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> -->
 	<link rel="stylesheet" href="css/basics.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/signup.css">
 	<link rel="stylesheet" href="css/toasts.css">
+	<link rel="stylesheet" href="css/particles.css">
+
+	<link rel="shortcut icon" href="assets/icon/logo.ico" type="image/x-icon">
+
 	<style>
 		a:hover {
 			text-decoration: none;
 		}
 
 		.container {
+			z-index: 110;
 			display: block;
-			width: 22rem;			
+			width: 22rem;
+		}
+
+		.spinner {
+			display: block;
+			position: absolute;
+			left: 45%;
+			top: 50%;
+			z-index: 1000;
+
+			font-size: 1.5rem;
+			width: 2.5rem;
+			height: 2.5rem;
 		}
 	</style>
+
 </head>
 
 <body>
-	<header>
-		<!-- <img class="logo" src="assets/images/logo.png"> -->
-	</header>
-
 	<div class="container">
+		<div class="spinner-border text-primary spinner" role="status" style="display: none">
+			<span class="sr-only">Loading...</span>
+		</div>
 		<div class="card mt-5">
 			<div class="card-body">
-				<form action="/signup" method="POST">
+				<form class="login-form">
 					<div class="avatar-container" data-type="image">
 						<i class="fas fa-camera-retro icon"></i>
 					</div>
@@ -53,7 +70,7 @@
 							</a>
 						</label>
 					</div>
-					<button type="submit" class="btn btn-primary btn-block mt-4">Login</button>
+					<button id="login-btn" type="submit" class="btn btn-primary btn-block mt-4">Login</button>
 				</form>
 			</div>
 		</div>
@@ -69,9 +86,11 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
 
-	<script src="js/signup.js"></script>
+	<!-- <script src="js/signup.js"></script> -->
+	<script src="js/login.js"></script>
 	<script src="js/toasts.js"></script>
-
+	<script src="js/particles.js"></script>
+		
 </body>
 
 </html>
