feat(auth): implement Google OAuth login
- Add Passport and Google OAuth strategy for authentication
- Update login page with Google sign-in button
- Modify user routes to handle Google authentication
- Update User model to accommodate Google login data
- Implement session management for Google-authenticated users
- Adjust profile view to display Google user information
- Update dependencies in package.json

--- a/public/login.html
+++ b/public/login.html
@@ -71,6 +71,11 @@
 					</div>
 					<button id="login-btn" type="submit" class="btn btn-primary btn-block mt-4">Login</button>
 				</form>
+
+				<hr>
+				<button class="btn btn-light text-secondary google-login" style="width: 100%; margin: auto; font-size: 1.25rem; font-weight: 500;">
+					<i class="fab fa-google"></i>&nbsp; Sign in with Google
+				</button>
 			</div>
 		</div>
 	</div>
